@@ -195,6 +195,8 @@ Customizing the axes
     labelHeight: null or number
     
     tickLength: null or number
+
+    alignTicksWithAxis: null or number
   }
 
 All axes have the same kind of options. The following describes how to
@@ -332,7 +334,15 @@ innermost axes will have ticks that extend all across the plot, while
 any extra axes use small ticks. A value of null means use the default,
 while a number means small ticks of that length - set it to 0 to hide
 the lines completely.
-  
+
+If you set "alignTicksWithAxis" to the number of another axis, e.g.
+alignTicksWithAxis: 1, Flot will ensure that the autogenerated ticks
+of this axis are aligned with the ticks of the other axis. This may
+improve the looks, e.g. if you have one y axis to the left and one to
+the right, because the grid lines will then match the ticks in both
+ends. The trade-off is that the forced ticks won't necessarily be at
+natural places.
+
 
 Multiple axes
 =============
